--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "dependencies": {
         "@electron-toolkit/preload": "^3.0.1",
         "@electron-toolkit/utils": "^3.0.0",
+        "@radix-ui/react-switch": "^1.2.5",
+        "@radix-ui/react-tooltip": "^1.2.7",
         "@tailwindcss/typography": "^0.5.15",
         "class-variance-authority": "^0.7.1",
         "jszip": "^3.10.1",
